# WAVM

Include/IR/: Types.h
Source/Platform/: POSIX.cpp
Source/Programs/: Assemble.cpp  CLI.h  CMakeLists.txt  Disassemble.cpp  JSONUIDecoder1.hh  README.md  emcc_dsp_aux.cpp  emcc_dsp_aux.hh  faust-wavm.cpp  faustbench-wavm.cpp  impulsewavm.cpp  wasm_dsp_aux.cpp  wasm_dsp_aux.hh  wavm-faust.cpp
Source/Runtime/: LLVMEmitIR.cpp  LLVMJIT.cpp  WAVMIntrinsics.cpp
